force-app/main/default/objects/Product2/fields/stayclassy__Charity_Donation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Charity_Donation_Percentage__c</fullName>
    <description>Percentage of ticket price that is considered donation to campaign</description>
    <label>Deductible Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>