force-app/main/default/objects/Product2/fields/stayclassy__Classy_Campaign__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classy Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>