force-app/main/default/objects/Product2/fields/stayclassy__Classy_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Campaign_ID__c</fullName>
    <description>The Classy Campaign/Event ID</description>
    <label>Classy Campaign ID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>