force-app/main/default/objects/Product2/fields/stayclassy__Classy_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Classy_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Classy Product ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>