force-app/main/default/objects/Product2/fields/stayclassy__Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Deductible_Amount__c</fullName>
    <description>Amount of ticket price that is considered donation to campaign</description>
    <label>Deductible Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>