force-app/main/default/objects/Product2/fields/stayclassy__Ended_At__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Ended_At__c</fullName>
    <description>Indicates the date and time that a ticket/registration will no longer be available for purchase.</description>
    <label>Ended At</label>
    <type>DateTime</type>
</CustomField>