force-app/main/default/objects/Product2/fields/stayclassy__Entries_Per_Ticket__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Entries_Per_Ticket__c</fullName>
    <description>How many entries a ticket/registration of this type grants to a purchaser</description>
    <label>Entries Per Ticket</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>