force-app/main/default/objects/Product2/fields/stayclassy__Is_Classy_Mode__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Is_Classy_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether ticket/registration of this type qualifies for Classy Mode pricing</description>
    <label>Is Classy Mode</label>
    <type>Checkbox</type>
</CustomField>