force-app/main/default/objects/Product2/fields/stayclassy__Min_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Min_Per_Transaction__c</fullName>
    <description>The minimum tickets/registrations of this type that must be purchased in a single transaction</description>
    <label>Min Per Transaction</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>