force-app/main/default/objects/Product2/fields/stayclassy__Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Quantity_Available__c</fullName>
    <description>Indicates the number of ticket/registrations available to be purchased</description>
    <label>Quantity Available</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>