force-app/main/default/objects/Product2/fields/stayclassy__Started_At__c.field-meta.xml
<CustomField>
    <fullName>stayclassy__Started_At__c</fullName>
    <description>Indicates the date and time after which a ticket/registration will be available for purchase.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>