force-app/main/default/objects/Product2/recordTypes/CnP_PaaS__C_P_Online.recordType-meta.xml
<RecordType>
    <fullName>CnP_PaaS__C_P_Online</fullName>
    <active>true</active>
    <label>C&amp;P Online</label>
</RecordType>