force-app/main/default/objects/Product2/listViews/stayclassy__All_Classy_Products.listView-meta.xml
<ListView>
    <fullName>stayclassy__All_Classy_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>stayclassy__Classy_Campaign__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>stayclassy__Charity_Donation_Percentage__c</columns>
    <columns>stayclassy__Quantity_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>stayclassy__Classy_Product_ID__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Classy Products</label>
</ListView>